# MXTune

./: .gitignore  ARA_IMPLEMENTATION_PLAN.md  CHANGELOG.md  CMakeLists.txt  JUCE8_UPGRADE_PLAN.md  README.md  build_macos.sh  build_windows.sh  delay.cpp  mx_tune.h  pitch_shifter.h
.github/workflows/: pr-build.yml  release.yml
JUCE/: mx_tune.jucer
JUCE/Source/: KeyDetectGui.cpp  PluginGui.cpp  PluginGui.h  PluginProcessor.cpp  include_juce_audio_devices.mm  include_juce_audio_formats.mm  include_juce_audio_utils.mm  kvbuf.c  standalone_Info.plist
docs/: BUILDING.md  DEVELOPER_NOTES.md  TROUBLESHOOTING.md
plans/: 01_JUCE8_UPGRADE.md  02_ARA_IMPLEMENTATION.md  05_DEV_TOOLING.md  ARA_IMPLEMENTATION_PLAN.md  ARA_TESTING_CASES.md  README.md
plans/04_UI_MODERNIZATION/: 04_UI_MODERNIZATION.md
scripts/: update_changelog.py
src/: manual_tune.cpp  pitch_detector_aubio.h  pitch_detector_talent.h  pitch_shifter_st.cpp  pitch_shifter_st.h  smbPitchShift.cpp
tests/: CMakeLists.txt  test_auto_tune.cpp  test_delay.cpp  test_manual_tune.cpp  test_midi_msg.cpp  test_ring_buffer.cpp  test_undo_redo.cpp
